Updated the explore, profiles show correctly now.

--- a/app/Views/app.twig
+++ b/app/Views/app.twig
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
     <style type="text/css">iframe.goog-te-banner-frame{ display: none !important;}</style>
     <style type="text/css">body {position: static !important; top:0px !important;}</style>
+    <style>
+        .card.hovercard .cardheader {
+          background: url("{{ base_url() }}/uploads/header.jpg");
+          background-size: cover;
+          height: 135px;
+        }
+    </style>
   </head>
 
   <body>
