change the buttons for oauth

--- a/app/Views/render/signin.twig
+++ b/app/Views/render/signin.twig
@@ -32,7 +32,7 @@
         </div>
       </div>
       <a href="{{ path_for('auth.reset') }}" class="btn-link btn-info" role="button">Reset Account.</a>
-      <a href="{{ path_for('oauth.google.signin') }}" title="Google+" class="btn btn-googleplus btn-lg"><i class="fa fa-google-plus fa-fw"></i></a>
+      <a href="{{ path_for('oauth.google.signin') }}" title="Google+" class="btn btn-lg"><i class="fa fa-google-plus fa-fw"></i></a>
       <a href="{{ path_for('oauth.42.signin') }}" title="42" class="btn btn-lg">42</a>
     </div>
   </div>
