--- a/app/Views/render/signup.twig
+++ b/app/Views/render/signup.twig
@@ -53,7 +53,7 @@
             </div>
           </div>
         </div>
-        <a href="{{ path_for('oauth.google.signup') }}" title="Google+" class="btn btn-googleplus btn-lg"><i class="fa fa-google-plus fa-fw"></i></a>
+        <a href="{{ path_for('oauth.google.signup') }}" title="Google+" class="btn btn-lg"><i class="fa fa-google-plus fa-fw"></i></a>
         <a href="{{ path_for('oauth.42.signup') }}" title="42" class="btn btn-lg">42</a>
       </div>
     </div>
