--- a/app/Views/render/home.twig
+++ b/app/Views/render/home.twig
@@ -7,14 +7,15 @@
 {% else %}
     {% include 'render/search.twig' %}
     {% if movies %}
-      <div class="row">
+    <div class="container">
+      <div id="movie-thumbnails" class="row">
           {% for movie in movies %}
               <div id="{{ movie.title }}" class="col-sm-4 text-center">
-                  <h3>{{ movie.title | raw }}</h3>
+                  <h3 class="movie-title">{{ movie.title | raw }}</h3>
                   <img src="{{ movie.large_cover_image }}" class="img-responsive" alt="{{ movie.title }}" width="100%" height="100%">
                   <button class="btn" data-toggle="modal" data-target="#{{ movie.id }}"><span class="glyphicon glyphicon-info-sign"></span></button>
-                  <a href="{{ path_for('home.stream') }}?movie={{ movie.id }}&name={{ movie.title | url_encode }}">
-                    <button class="btn">
+                  <a class="stream-id" href="{{ path_for('home.stream') }}?movie={{ movie.id }}&name={{ movie.title | url_encode }}">
+                    <button class="movie-watched btn">
                     {% set found = false %}
                     {% for curr in watched if curr.movie_id == movie.id %}
                         {% set found = true %}
@@ -26,19 +27,18 @@
                     </button>
                   </a>
               </div>
-
               <div class="modal fade" id="{{ movie.id }}" role="dialog">
                 <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h4><span class="glyphicon glyphicon-film"></span> {{ movie.title }}</h4>
+                      <h4 class="movie-title-h4"><span class="glyphicon glyphicon-film"></span> {{ movie.title }}</h4>
                     </div>
                     <div class="modal-body">
-                      <p>Producton Year: {{ movie.year }}</p>
-                      <p>imdB rating: {{ movie.rating }}</p>
-                      <p>Runtime: {{ movie.runtime }} minutes</p>
-                      <p>Synopsis: {{ movie.synopsis }} </p>
+                      <p class="movie-year">Producton Year: {{ movie.year }}</p>
+                      <p class="movie-rating">imdB rating: {{ movie.rating }}</p>
+                      <p class="movie-runtime">Runtime: {{ movie.runtime }} minutes</p>
+                      <p class="movie-synopsis">Synopsis: {{ movie.synopsis }} </p>
                     </div>
                     <div class="modal-footer">
                       <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
@@ -49,6 +49,7 @@
           {% endfor %}
       </div>
     {% include 'render/pager.twig' %}
+  </div>
     {% else %}
       <h3>No Movies Found</h3>
     {% endif %}
