--- a/app/Views/render/stream.twig
+++ b/app/Views/render/stream.twig
@@ -6,9 +6,10 @@
 
   <div align="center" class="embed-responsive embed-responsive-16by9">
       <video autoplay loop class="embed-responsive-item">
-          <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
+          <source src="https://www.youtube.com/embed/SpXw0qiy3Wo" type="video/mp4">
       </video>
   </div>
   {% include 'render/comments.twig' %}
 </div>
+
 {% endblock %}
