--- a/app/Views/render/navigation.twig
+++ b/app/Views/render/navigation.twig
@@ -12,7 +12,7 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
-      <li><a href="{{ path_for('home') }}"><span class="glyphicon glyphicon-home"></span>  .tube</a></li>
+      <li><a href="{{ path_for('home') }}"><span class="glyphicon glyphicon-home"></span></a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       {% if auth.check %}
