fixed glitch in modal Movie, and added the production info for the video part

--- a/app/Views/render/stream.twig
+++ b/app/Views/render/stream.twig
@@ -9,6 +9,7 @@
           <source src="https://www.youtube.com/embed/SpXw0qiy3Wo" type="video/mp4">
       </video>
   </div>
+  {% include 'render/movie-info.twig' %}
   {% include 'render/comments.twig' %}
 </div>
 
