--- a/app/Views/render/movie-info.twig
+++ b/app/Views/render/movie-info.twig
@@ -22,7 +22,7 @@
     </a>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading">Length</h4>
-      <p class="list-group-item-text">{% if movie_details.Runtime is empty %}N/A{% else %}{{ movie_details.Runtime }} minutes{% endif %}</p>
+      <p class="list-group-item-text">{% if movie_details.Runtime is empty %}N/A{% else %}{{ movie_details.Runtime }}{% endif %}</p>
     </a>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading">IMDB grade</h4>
