--- a/app/Views/render/sort-filter.twig
+++ b/app/Views/render/sort-filter.twig
@@ -1,6 +1,6 @@
-<div id="sort-filter" class="container" style="margin-top: 2%;">
+<div id="sort-filter" class="container" style="margin-top: 2%; background-color: #0C0C0C;">
 
-  <div id="sort" class="row">
+  <div id="sort" class="row" style="margin-top: 2%; width: 90%; margin-left: auto; margin-right: auto;">
 
     <div class="col-sm-2">
 
@@ -11,8 +11,8 @@
 
         <ul class="dropdown-menu">
 
-          <li><a href="#">Name ASC</a></li>
-          <li><a href="#">Name DES</a></li>
+          <li><div class="radio"><label><input type="radio" name="year_asc">ASC</label></div></li>
+          <li><div class="radio"><label><input type="radio" name="year_des">DES</label></div></li>
 
         </ul>
 
@@ -108,5 +108,7 @@
       </div>
 
     </div>
+
+  </div>
 
 </div>
