--- a/app/Views/render/home.twig
+++ b/app/Views/render/home.twig
@@ -54,7 +54,9 @@
     {% include 'render/pager.twig' %}
   </div>
     {% else %}
-      <h3>No Movies Found</h3>
+      <div class="container">
+        <h3>No Movies Found</h3>
+      </div>
     {% endif %}
 {% endif %}
 
