--- a/app/Views/render/search.twig
+++ b/app/Views/render/search.twig
@@ -1,5 +1,5 @@
 <div class="container">
-  <br><br><a href="#search-sort" data-toggle="collapse"><span class="glyphicon glyphicon-sort"> & <span class="glyphicon glyphicon-filter"></a>
+  <br><br><a href="#search-sort" data-toggle="collapse"><span class="glyphicon glyphicon-sort"> <span class="glyphicon glyphicon-filter"></a><br><br>
 </div>
 <div id="search-sort" class="collapse">
 <form action="{{ path_for('home') }}" method="GET" autocomplete="off">
