Added the delete movie after not being watched for a month

--- a/app/Views/render/profile.twig
+++ b/app/Views/render/profile.twig
@@ -39,7 +39,7 @@
                 <h4><span class="glyphicon glyphicon-user"></span> Update BIO</h4>
               </div>
               <div class="modal-body">
-                <p>Change Profile Picture</p>
+                <p>Change Profile Details</p>
                 <div class="well well-sm">
                   <form method="POST" action="{{ path_for('profile.bio.change') }}" enctype="multipart/form-data">
                     <div class="form-group{{ errors.email ? ' has-error' : ''}}">
