--- a/app/Views/render/reset-change.twig
+++ b/app/Views/render/reset-change.twig
@@ -14,14 +14,14 @@
             <form action="{{ path_for('auth.reset.change') }}" method="post" autocomplete="off">
               <div class="form-group{{ errors.password ? ' has-error' : ''}}">
                 <label for="new_password"><span class="glyphicon glyphicon-lock"></span> New Password</label>
-                <input type="new_password" name="new_password" id="new_password" class="form-control">
+                <input type="password" name="new_password" id="new_password" class="form-control">
                 {% if errors.new_password %}
                   <span class="help-block" >{{ errors.new_password | first }}</span>
                 {% endif %}
               </div>
               <div class="form-group{{ errors.password ? ' has-error' : ''}}">
                 <label for="cnew_password"><span class="glyphicon glyphicon-lock"></span> Confrim New Password</label>
-                <input type="cnew_password" name="cnew_password" id="cnew_password" class="form-control">
+                <input type="password" name="cnew_password" id="cnew_password" class="form-control">
                 {% if errors.cnew_password %}
                   <span class="help-block" >{{ errors.cnew_password | first }}</span>
                 {% endif %}
